// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`module query declaration constant a basic model 1`] = `
"declare const get: {
    /** Get a single account record */
    account: AccountSyntax<Account | null>;
    /** Get multiple account records */
    accounts: AccountSyntax<Accounts>;
};
"
`;

exports[`module query declaration constant with no modules 1`] = `
"declare const get: {};
"
`;

exports[`module query declaration constant with multiple models 1`] = `
"declare const get: {
    /** Get a single account record */
    account: AccountSyntax<Account | null>;
    /** Get multiple account records */
    accounts: AccountSyntax<Accounts>;
    /** Get a single post record */
    post: PostSyntax<Post | null>;
    /** Get multiple post records */
    posts: PostSyntax<Posts>;
};
"
`;
